# dogfold

./: README.md  pyproject.toml
docs/: architecture.md
src/dogfold/: __init__.py  cli.py
src/dogfold/bootstrap/: __init__.py  build_domain.py  define_class.py  register_verb.py  verb_class.py
src/dogfold/kernel/: __Init__.py  target_resolver.py
src/dogfold/templates/: class_template.py
src/dogfold/templates/verbs/: define.py  register.py
src/dogfold/verbs/: define.py  register.py
